# ai_project_cookie_cutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: Dockerfile  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/: config.py  main.py
{{cookiecutter.project_slug}}/backend/app/api/: agent.py  ask.py  chat.py  memory.py  multi_agent.py  rag.py  search.py
{{cookiecutter.project_slug}}/backend/app/api/utils/: auth.py  security.py
{{cookiecutter.project_slug}}/backend/app/core/: __init__.py  state.py  workflow.py
{{cookiecutter.project_slug}}/backend/app/core/eval/: __init__.py  evaluator.py  metrics.py
{{cookiecutter.project_slug}}/backend/app/core/llm/: __init__.py  factory.py
{{cookiecutter.project_slug}}/backend/app/core/mcp/: __init__.py
{{cookiecutter.project_slug}}/backend/app/core/prompts/: __init__.py  load_prompt.py
{{cookiecutter.project_slug}}/backend/app/core/prompts/templates/eval/: answer_relevance.yaml  faithfulness.yaml
{{cookiecutter.project_slug}}/backend/app/core/tools/: __init__.py
{{cookiecutter.project_slug}}/backend/app/db/: models.py  session.py
{{cookiecutter.project_slug}}/backend/app/rag/: graph.py
{{cookiecutter.project_slug}}/backend/app/schemas/: __init__.py  agent.py  chat.py  multi_agent.py  rag.py
{{cookiecutter.project_slug}}/frontend/: Dockerfile  app.py  chainlit.md  config.py  pyproject.toml
{{cookiecutter.project_slug}}/frontend/src/api/: auth.py
{{cookiecutter.project_slug}}/mcp_services/coordination_server/: Dockerfile  mcp_server.py  pyproject.toml
{{cookiecutter.project_slug}}/mcp_services/ingest_server/: Dockerfile  mcp_server.py  pyproject.toml
{{cookiecutter.project_slug}}/mcp_services/memory_server/: mcp_server.py  pyproject.toml
{{cookiecutter.project_slug}}/mcp_services/search_server/: Dockerfile  mcp_server.py  pyproject.toml
(+5 files in other folders)
