[project]
name = "{{ cookiecutter.project_slug }}-backend"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2.5",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
  "langchain>=0.3",
  "langchain-ollama>=0.2",
  "langgraph>=0.2",
  "httpx>=0.27",{% if cookiecutter.use_auth == 'yes' %}
  "python-jose>=3.3",
  "passlib>=1.7",{% endif %}
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
