[project]
name = "{{ cookiecutter.project_slug }}-frontend"
version = "0.1.0"
description = "Chainlit frontend for {{ cookiecutter.project_name }}"
requires-python = ">=3.11"
dependencies = [
  "chainlit>=2.0",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
