[project]
name = "{{ cookiecutter.project_slug }}-mcp-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2.5",
  "pdfplumber>=0.11",
  "beautifulsoup4>=4.12",
  "lxml>=5.1",
  "tiktoken>=0.6",
  "pyyaml>=6.0",
  "fastmcp>=2.14",
]

[tool.hatch.build.targets.wheel]
packages = ["ingest_server"]
